<resources>
    <string name="app_name">App_Managerment</string>

    <string name="nav_home">Trang Chủ</string>
    <string name="nav_donhang">Đơn Hàng</string>
    <string name="nav_dangsp">Đăng Sản Phẩm</string>
    <string name="nav_thongke">Thống kê</string>
    <string name="nav_taikhoan">Tài Khoản</string>
    <string name="nav_dangnhap">Đăng nhập</string>
    <string name="nav_thoat">Thoát</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>